10-kub-ingressRoute-provider-redirect-middleware/vault-redirect-middleware.yml
# Redirect to https
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vault-redirectscheme
  namespace: vault
spec:
  redirectScheme:
    scheme: https
    permanent: true
