10-kub-ingressRoute-provider-redirect-middleware/vault-ingress-route-non-secure.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-route-non-secure
  namespace: vault
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`vault.isc`)
    kind: Rule
    services:
    - name: vault
      namespace: vault
      port: 8200
    middlewares:
    - name: vault-redirectscheme
      namespace: vault
